Release CMTK-1.5.0:

(r2416) Changed: "make_initial_affine" now defaults to writing transformations
    in CMTK standard RAS space, rather than between native image spaces. This
    makes much more sense, because in all likelihood it will be other CMTK
    tools reading these transformations.
(r2408) Fixed: average images created by the groupwise registration tools did
    not have proper coordinate space information. Also made the default output
    image type NIFTI (instead of Analyze) to produce files with fully
    specified coordinate systems.
(r2395) Fixed/Added: triplanar viewer now displays RAS physical coordinates of
    current location; also fixed problem with repeated slice position change
    after a single mouse click.
(r2390) Changed: by default, the DICOM image stacker, "dcm2image," now writes
    NIFTI files with attached header (.nii) rather than Analyze hdr/img
    pairs. This is because Analyze format does not properly represent the
    image location and orientation information obtained from the DICOM input
    images.
(r2380) Removed: several hundred lines of unused, obsolete code was removed
    from the Numerics library.


Release CMTK-1.4.3 (2010-09-28):

(r2365) Fixed: "xform2dfield" and "xform2scalar" tools did not respect
    CMTK_NUM_THREADS variable, as they were only using OpenMP directly.
(r2359) Added: by default, CMTK is now built with support for on-the-fly
    decompression of bzip2 and lzma-compressed files if libbzip2 and/or
    liblzmadec and their respective header files are installed on the build
    system. Also rewrote the decompression class, cmtk::CompressedStream, from
    scratch to be more easily extended.
(r2345) Fixed: prevent "dcm2image" tool from trying to read compressed (using
    gzip, etc.) DICOM files, as these cannot be read by DCMTK right now.
(r2337) Added: "describe" tool now prints machine-readable image-to-physical
    space transformation matrix. Also transposed matrix output to make it