@@ -463,6 +463,8 @@ IF(NOT CMTK_USE_MPI)
     registrationxWithInitial
     registrationxWithInitialInverse
     registrationxAutoLevelsRat4
+    registrationxAutoLevelsRat4NONE
+    registrationxAutoLevelsRat4FOV
     registrationxAutoLevelsRat4COM
     registrationxAutoLevelsRat4PAX
     registrationxAutoLevelsRat2
