@@ -4,9 +4,9 @@ registration {
 	reference_study "pat001_mr_T1.hdr"
 	floating_study "pat002_mr_T2.hdr"
 	affine_xform {
-		xlate 0.8 -2.5 -25.4 
-		rotate -0.02691056602 1.27786146 0.3728485621 
-		scale 1.004319188 0.968415938 1.000809848 
+		xlate 4.149998474 0.460005188 -24.9 
+		rotate 0.3767479242 0.5349187507 2.423515654 
+		scale 1.009988122 0.9886621316 1.000269949 
 		shear 0 0 0 
 		center 76.5 98.54999542 63 
 	}
