@@ -4,10 +4,10 @@ registration {
 	reference_study "pat001_mr_T1.hdr"
 	floating_study "pat002_mr_T2.hdr"
 	affine_xform {
-		xlate 4.769999778 1.889999912 -31.49999854 
-		rotate 14.43482694 -1.711739923 0.7130728419 
+		xlate 4.43999847 -5.309994841 -27.59999921 
+		rotate -6.636145271 0.6686484073 2.873264098 
 		scale 1 1 1 
-		shear 0.08965014102 -0.08479105478 -0.202623896 
+		shear 0.09499513587 -0.04518950198 0.1209912472 
 		center 76.5 98.54999542 63 
 	}
 }
