@@ -1,5 +1,8 @@
 Release CMTK-1.5.0:
 
+(r) Fixed: "registrationx" tool ignored user specification for transform
+    initializer and always used an identity transformation unless an explicit
+    initial alignment was provided.
 (r2416) Changed: "make_initial_affine" now defaults to writing transformations
     in CMTK standard RAS space, rather than between native image spaces. This
     makes much more sense, because in all likelihood it will be other CMTK
